WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80390
Attempt to fix the GTK minimal build
https://bugs.webkit.org/show_bug.cgi?id=80390
Summary
Attempt to fix the GTK minimal build
Adam Barth
Reported
2012-03-05 23:41:46 PST
Attempt to fix the GTK minimal build
Attachments
Patch
(1.98 KB, patch)
2012-03-05 23:42 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-03-05 23:42:51 PST
Created
attachment 130306
[details]
Patch
Csaba Osztrogonác
Comment 2
2012-03-06 00:04:09 PST
Comment on
attachment 130306
[details]
Patch r=me, thanks for the fix. (but the title is misleading a little bit, because it will fix all ENABLE(GEOLOCATION)=0 platform, not only GTK/Qt minimal)
WebKit Review Bot
Comment 3
2012-03-06 01:08:02 PST
Comment on
attachment 130306
[details]
Patch Clearing flags on attachment: 130306 Committed
r109875
: <
http://trac.webkit.org/changeset/109875
>
WebKit Review Bot
Comment 4
2012-03-06 01:08:07 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug