Attempt to fix the GTK minimal build https://bugs.webkit.org/show_bug.cgi?id=80390

Reviewed by Csaba Osztrogonác.

Add some missing ifdefs.

* Modules/geolocation/NavigatorGeolocation.cpp:
* Modules/geolocation/NavigatorGeolocation.h:


Canonical link: https://commits.webkit.org/97513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109875 268f45cc-cd09-0410-ab3c-d52691b4dbfc